--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -67,6 +67,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>5.5.0</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
